Se inicia con el estilizado de la seccion de proyectos

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
         <nav role="navigation" aria-label="Menú de navegación">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#proyectos">Proyectos</a></li>
-                <li><a href="#">Contacto</a></li>
+                <a href="#"><li>Inicio</li></a>
+                <a href="#proyectos"><li>Proyectos</li></a>
+                <a href="#"><li>Contacto</li></a>
             </ul>
 
         </nav>
@@ -55,10 +55,10 @@
         <section class="proyectos-container" id="proyectos" role="region" aria-labelledby="proyectos">
             <h2>Proyectos</h2>
             <ul>
-                <li>Calculadora</li>
-                <li>Ejemplo tabla</li>
-                <li>HTML Semantico</li>
-                <li><a href="#">Inicio</a></li>
+                <a href=""><li>Calculadora</li></a>
+                <a href=""><li>Ejemplo tabla</li></a>
+                <a href=""><li>HTML Semantico</li></a>
+                <a href="#"><li>Inicio</li></a>
             </ul>
         </section>
 
