SE inicia con los trabajos de la página de contacto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <a href="#"><li>Inicio</li></a>
                 <a href="#proyectos"><li>Proyectos</li></a>
-                <a href="#"><li>Contacto</li></a>
+                <a href="./contacto.html"><li>Contacto</li></a>
             </ul>
 
         </nav>
@@ -55,16 +55,16 @@
         <section class="proyectos-container" id="proyectos" role="region" aria-labelledby="proyectos">
             <h2>Proyectos</h2>
             <ul>
-                <a href=""><li>Calculadora</li></a>
-                <a href=""><li>Ejemplo tabla</li></a>
-                <a href=""><li>HTML Semantico</li></a>
+                <a href="#"><li>Calculadora</li></a>
+                <a href="#"><li>Ejemplo tabla</li></a>
+                <a href="#"><li>HTML Semantico</li></a>
                 <a href="#"><li>Inicio</li></a>
             </ul>
         </section>
 
 
     </main>
-    <footer role="contentinfo">
+    <footer id="pie-de-pagina" role="contentinfo">
         <p>Derechos reservados &copy; Dave Gómez 2025</p>
     </footer>
 </body>
