Subir el sitio a Github

--- a/contacto.html
+++ b/contacto.html
@@ -26,6 +26,7 @@
                 <legend> Informacion del contacto</legend>
                 <label for="name">Nombre</label>
                 <input type="text" id="name" name="nombre"  aria-required="true" aria-describedby="nombre-info" required>
+                <br>
                 <small id="nombre-info">Por favor, ingresa tu nombre,</small>
                 <br>
                 <label for="movil">Movil</label>
@@ -35,13 +36,13 @@
                 <input type="email" name="email" id="correo"  aria-required="true" required>
                 <br>
                 <button type="submit" id="submitButton" aria-label="Enviar formulario" >Enviar datos</button>
-
             </fieldset>
-          
-
         </form>
     </section>
 <script src="./validacionesContacto.js"></script>
+<section>
+    <a href="/index.html"><button>Home</button></a>
+</section>
 </body>
 
 </html>
