--- a/contacto.html
+++ b/contacto.html
@@ -41,7 +41,7 @@
     </section>
 <script src="./validacionesContacto.js"></script>
 <section>
-    <a href="/index.html"><button>Home</button></a>
+    <a href="index.html"><button>Home</button></a>
 </section>
 </body>
 
